--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </script>
 
 </head>
-<body class="manrope overflow-x-hidden m-0 p-0">
-    <header class="w-[90%] lg:w-[80%] mx-auto my-10">
+<body class="manrope">
+    <header class="w-[90%] mx-auto lg:w-[80%] my-10">
         <nav>
             <div class="navbar bg-base-100">
-                <div class="navbar-start w-[40%]">
+                <div class="w-[50%] lg:w-[30%]">
                   <a class=" flex items-center gap-2">
                   <div>
                     <i class="fa-solid fa-arrow-right-long -rotate-45 border-2 bg-primary-color border-none p-2 text-md rounded-[50%]"></i>
@@ -46,7 +46,7 @@
                   </div> 
                 </a>
                 </div>
-                <div class="navbar-center hidden lg:flex">
+                <div class="navbar-center hidden lg:inline">
                   <ul class="menu menu-horizontal px-1 opacity-90 font-medium">
                     <li><a>Home</a></li>
                       <li><a>Services</a></li>
@@ -70,34 +70,14 @@
                     <div>
                         <i class="fa-solid fa-arrow-right-long -rotate-45 border-2 bg-black text-white border-none p-2 text-md rounded-[50%]"></i>
                     </div>
+                    
                     </button>
+                   
                   </div>
                 </div>
-                <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-5 w-5"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M4 6h16M4 12h8m-8 6h16" />
-                      </svg>
-                    </div>
-                    <ul
-                      tabindex="0"
-                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                      <li><a class="text-black-500">Home</a></li>
-                      <li> <a>Services</a></li>
-                      <li><a>Portfolio</a></li>
-                      <li><a>Blogs</a></li>
-                      <li><a>Contact Us</a></li>
-                    </ul>
-                  </div>
+                <div class=" p-2 rounded-[50%] border-2 border-gray-200 bg-white fa-solid lg:hidden ml-2">
+                    <i class="fa-solid fa-bars"></i>
+               </div>
               </div>
         </nav>
     </header>
