--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 clifford: '#da373d',
                 'primary-color': '#ABEF5F',
                 'b-color':'rgba(255, 255, 255, 0)',
+                'btn-bg':'#ABEF5F80',
               }
             }
           }
@@ -34,7 +35,7 @@
 </head>
 <body class="manrope">
     <header class="w-[90%] mx-auto lg:w-[80%] my-10">
-        <nav>
+        <nav class="mb-5">
             <div class="navbar bg-base-100">
                 <div class="w-[50%] lg:w-[30%]">
                   <a class=" flex items-center gap-2">
@@ -80,6 +81,20 @@
                </div>
               </div>
         </nav>
+        <div class="flex justify-center items-center flex-col">
+            <img src="./assets/banner.png" alt="">
+            <h1 class="font-extrabold leading-tight text-3xl lg:text-6xl text-center my-8">A barn house of this design has a striking appearance</h1>
+            <p class="text-center w-[85%] font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <div class="flex justify-center items-center flex-col">
+                <button class=" flex items-center gap-2 bg-btn-bg rounded-[30px] px-20 lg:px-5 py-3 border-1 border-green-500 my-8">
+                    <div>
+                       <h1 class="font-bold text-lg text-black"> View Details</h1>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-arrow-right-long -rotate-45  bg-primary-color text-black border-none p-2 text-md rounded-[50%]"></i>
+                    </div></button>
+            </div>
+        </div>
     </header>
     <main>
 
