--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 'primary-color': '#ABEF5F',
                 'b-color':'rgba(255, 255, 255, 0)',
                 'btn-bg':'#ABEF5F80',
+                'main-bg':'#737373',
               }
             }
           }
@@ -83,7 +84,7 @@
         </nav>
         <div class="flex justify-center items-center flex-col">
             <img src="./assets/banner.png" alt="">
-            <h1 class="font-extrabold leading-tight text-3xl lg:text-6xl text-center my-8">A barn house of this design has a striking appearance</h1>
+            <h1 class="font-extrabold lg:leading-tight text-3xl lg:text-6xl text-center my-8">A barn house of this design has a striking appearance</h1>
             <p class="text-center w-[85%] font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <div class="flex justify-center items-center flex-col">
                 <button class=" flex items-center gap-2 bg-btn-bg rounded-[30px] px-20 lg:px-5 py-3 border-1 border-green-500 my-8">
@@ -96,8 +97,45 @@
             </div>
         </div>
     </header>
-    <main>
-
+    <main class="bg-gray-200">
+        <section class=" w-[90%] mx-auto lg:w-[80%] py-20 lg:flex items-center relative">
+            <div class="hidden lg:inline absolute top-12 -left-16">
+                <img src="./assets/Vector.png" alt="">
+            </div>
+            <div class="lg:w-[50%] text-center lg:text-left">
+                <button class="px-3 py-2  rounded-[30px] bg-white font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> About Us</button>
+                <h1 class="font-extrabold text-black leading-tight text-4xl">We design thoughtful, liveable spaces</h1>
+                <p class="text-sm md:text-xl lg:text-sm text-gray-600 font-semibold leading-relaxed my-5">The barn house captivates with its blend of rustic charm and 
+                    modern sophistication, featuring weathered wood, sleek metal accents.
+                </p>
+               <div class="md:flex md:items-center md:gap-2 md:justify-center lg:inline">
+                <div class="flex items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg mb-8 md:mb-0 lg:mb-8 relative">
+                    <div>
+                        <img src="./assets/commercial.png" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h2 class="font-bold text-xl pb-3">Commercial</h2>
+                        <p class="text-sm font-semibold text-gray-600">The barn house captivates with its  blend  of rustic charm and modern.       
+                        </p>
+                    </div>
+                </div>
+                <div class="flex items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg">
+                    <div>
+                        <img src="./assets/residential.png" alt="">
+                    </div>
+                    <div class="text-left">
+                        <h2 class="font-bold text-xl pb-3">Residential</h2>
+                        <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
+                    </div>
+                </div>
+               </div>
+                
+            </div>
+            <div class="md:w-[100%lg:w-[50%] mt-10 flex justify-center items-center flex-col">
+                <img class="md:w-[100%]" src="./assets/Rectangle.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
