--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-gray-200">
+    <main class="bg-gray-200 pb-20">
         <section class=" w-[90%] mx-auto lg:w-[80%] py-20 lg:flex items-center relative">
             <div class="hidden lg:inline absolute top-12 -left-16">
                 <img src="./assets/Vector.png" alt="">
@@ -134,6 +134,28 @@
             </div>
             <div class="md:w-[100%lg:w-[50%] mt-10 flex justify-center items-center flex-col">
                 <img class="md:w-[100%]" src="./assets/Rectangle.png" alt="">
+            </div>
+        </section>
+        <section class="w-[90%] mx-auto lg:w-[80%] grid  grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4 bg-white p-10 rounded-xl">
+            <div class="flex justify-center items-center flex-col  space-y-2">
+                <img src="./assets/icon1.png" alt="">
+                <h1 class="font-extrabold text-4xl">235+</h1>
+                <p class="text-gray-600 font-semibold">Happy Client Review</p>
+            </div>
+            <div class="flex justify-center items-center flex-col  space-y-2">
+                <img src="./assets/icon2.png" alt="">
+                <h1 class="font-extrabold text-4xl">50+</h1>
+                <p class="text-gray-600 font-semibold">Work Departments</p>
+            </div>
+            <div class="flex justify-center items-center flex-col  space-y-2">
+                <img src="./assets/icon3.png" alt="">
+                <h1 class="font-extrabold text-4xl">30k+</h1>
+                <p class="text-gray-600 font-semibold">Our Happy clients</p>
+            </div>
+            <div class="flex justify-center items-center flex-col space-y-2">
+                <img src="./assets/icon4.png" alt="">
+                <h1 class="font-extrabold text-4xl">307+</h1>
+                <p class="text-gray-600 font-semibold">Staff Members</p>
             </div>
         </section>
     </main>
