add card container

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 'b-color':'rgba(255, 255, 255, 0)',
                 'btn-bg':'#ABEF5F80',
                 'main-bg':'#737373',
+                'card1-bg':'#E7C1D3',
+                'card2-bg':'#EFDA6E',
+                'card3-bg':'#A4DAC3',
+                'card4-bg':'#77AAEA',
               }
             }
           }
@@ -156,6 +160,33 @@
                 <img src="./assets/icon4.png" alt="">
                 <h1 class="font-extrabold text-4xl">307+</h1>
                 <p class="text-gray-600 font-semibold">Staff Members</p>
+            </div>
+        </section>
+        <section class="my-20 w-[90%] mx-auto lg:w-[50%] flex justify-center items-center flex-col">
+            <button class="px-3 py-2  rounded-[30px] bg-white font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> How we works</button>
+            <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Works Process</h1>
+            <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+        </section>
+        <section class="w-[90%] mx-auto lg:w-[80%] grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4">
+            <div class="bg-card1-bg p-6 rounded-lg">
+                <img src="./assets/concept.png" alt="">
+                <h2 class="font-extrabold text-xl py-2">Concept</h2>
+                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="bg-card2-bg p-6 rounded-lg">
+                <img src="./assets/flow-chart.png" alt="">
+                <h2 class="font-extrabold text-xl py-2">Design Process</h2>
+                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="bg-card3-bg p-6 rounded-lg">
+                <img src="./assets/vision.png" alt="">
+                <h2 class="font-extrabold text-xl py-2">Supervision</h2>
+                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="bg-card4-bg p-6 rounded-lg">
+                <img src="./assets/budget-planning.png" alt="">
+                <h2 class="font-extrabold text-xl py-2">Budget Planning</h2>
+                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
             </div>
         </section>
     </main>
