--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="w-[90%] mx-auto lg:w-[80%]">
                 <section class="my-10 w-[100%] mx-auto lg:w-[60%] flex justify-center items-center flex-col pt-28 ">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Explore Our Latest Works</button>
-                    <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Works Process</h1>
+                    <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Latest Portfolio</h1>
                     <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
                 </section>
                 <section class="grid grid-cols-1 md:grid-cols-6 lg:grid-cols-12 gap-4">
@@ -239,6 +239,82 @@
                         <img class="w-full" src="./assets/img3.png" alt="">
                     </div>
                 </section>
+            </div>
+        </section>
+        <section class="mt-20 mb-10 w-[90%] mx-auto lg:w-[60%] flex justify-center items-center flex-col">
+            <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Rinterio News</button>
+            <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4 tracking-tighter text-center">Read Our Articles and News</h1>
+            <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+        </section>
+        <section class="w-[90%] mx-auto lg:w-[80%] grid grid-cols-1 lg:grid-cols-3 gap-5">
+            <div class="p-5 rounded-xl bg-white md:flex gap-5 lg:inline">
+                <img src="./assets/article1.png" alt="">
+                <div>
+                    <div class="flex flex-start gap-5 text-sm">
+                        <div class="flex items-center gap-2 py-3 ">
+                            <i class="text-xl text-gray-400 fa-regular fa-calendar-days"></i>
+                            <p>July14, 2024</p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <i class="p-1 rounded-[50%] border-2 border-gray-400 fa-regular fa-user"></i>
+                            <p>By Admin</p>
+                        </div>
+                    </div>
+                    <h1 class="font-bold text-xl pb-3">How to choose the furniture right  of your home.</h1>
+                    <p class="text-sm font-semibold text-gray-600 pb-5">The barn house captivates with its blend of rustic charm and modern. </p>
+                    <button class="flex items-center gap-3">
+                        <h1 class="font-bold text-lg">Read More</h1>
+                        <div>
+                            <i class="fa-solid fa-arrow-right-long -rotate-45 border-2 bg-primary-color border-none p-2 text-md rounded-[50%]"></i>
+                        </div>
+                    </button>
+                </div>
+            </div>
+            <div class="p-5 rounded-xl bg-white md:flex gap-5 lg:inline">
+                <img src="./assets/article2.png" alt="">
+                <div>
+                    <div class="flex flex-start gap-5 text-sm">
+                        <div class="flex items-center gap-2 py-3 ">
+                            <i class="text-xl text-gray-400 fa-regular fa-calendar-days"></i>
+                            <p>July14, 2024</p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <i class="p-1 rounded-[50%] border-2 border-gray-400 fa-regular fa-user"></i>
+                            <p>By Admin</p>
+                        </div>
+                    </div>
+                    <h1 class="font-bold text-xl pb-3">How to choose the furniture right  of your home.</h1>
+                    <p class="text-sm font-semibold text-gray-600 pb-5">The barn house captivates with its blend of rustic charm and modern. </p>
+                    <button class="flex items-center gap-3">
+                        <h1 class="font-bold text-lg">Read More</h1>
+                        <div>
+                            <i class="fa-solid fa-arrow-right-long -rotate-45 border-2 bg-primary-color border-none p-2 text-md rounded-[50%]"></i>
+                        </div>
+                    </button>
+                </div>
+            </div>
+            <div class="p-5 rounded-xl bg-white md:flex gap-5 lg:inline">
+                <img src="./assets/article3.png" alt="">
+                <div>
+                    <div class="flex flex-start gap-5 text-sm">
+                        <div class="flex items-center gap-2 py-3 ">
+                            <i class="text-xl text-gray-400 fa-regular fa-calendar-days"></i>
+                            <p>July14, 2024</p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <i class="p-1 rounded-[50%] border-2 border-gray-400 fa-regular fa-user"></i>
+                            <p>By Admin</p>
+                        </div>
+                    </div>
+                    <h1 class="font-bold text-xl pb-3">How to choose the furniture right  of your home.</h1>
+                    <p class="text-sm font-semibold text-gray-600 pb-5">The barn house captivates with its blend of rustic charm and modern. </p>
+                    <button class="flex items-center gap-3">
+                        <h1 class="font-bold text-lg">Read More</h1>
+                        <div>
+                            <i class="fa-solid fa-arrow-right-long -rotate-45 border-2 bg-primary-color border-none p-2 text-md rounded-[50%]"></i>
+                        </div>
+                    </button>
+                </div>
             </div>
         </section>
     </main>
