--- a/index.html
+++ b/index.html
@@ -329,9 +329,6 @@
             </div>
         </section>
         </section>
-        <!-- <div class="h-2 bg-white">
-
-        </div> -->
         <section class="discuss-container m-2">
                 <section class="pt-24 pb-10 w-[90%] mx-auto lg:w-[60%] flex justify-center items-center flex-col">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Let's Connect</button>
@@ -364,8 +361,29 @@
                 </section>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-gray-900 py-24">
+        <section class="w-[90%] mx-auto lg:w-[60%]">
+            <div class="flex items-center justify-center flex-col">
+                <button class="flex items-center gap-3">
+                    <i class="p-2 rounded-[50%] bg-primary-color text-black -rotate-45 fa-solid fa-arrow-right-long"></i>
+                    <h1 class="text-white font-bold text-3xl">Rinterio</h1>
+                </button>
+            </div>
+            <p class="text-center w-[90%] mx-auto lg:w-[80%] text-gray-500 font-semibold text-sm py-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="text-white font-light flex flex-col md:flex-row gap-5 md:gap-0 justify-between items-center py-4">
+                <p>Home</p>
+                <p>Services</p>
+                <p>Portfolio</p>
+                <p>Blogs</p>
+                <p>Contact Us</p>
+            </div>
+            <div class="flex justify-center items-center flex-col mt-8 w-[85%] mx-auto md:w-[30%] bg-primary-color rounded-[30px]">
+                <button class="flex items-center gap-3 py-3 px-3">
+                    <h1 class="font-extrabold text-lg">Book Consult</h1>
+                    <i class="p-2 rounded-[50%] bg-black text-white -rotate-45 fa-solid fa-arrow-right-long"></i>
+                </button>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
