--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             </nav>
             <div class="flex justify-center items-center flex-col">
                 <img src="./assets/banner.png" alt="">
-                <h1 class="font-extrabold lg:leading-tight text-3xl lg:text-6xl text-center my-8">A barn house of this design has a striking appearance</h1>
-                <p class="text-center w-[85%] font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <h1 class="font-extrabold lg:leading-tight text-3xl lg:text-5xl text-center my-8">Creating elegant, personalized interiors that reflect your unique style.</h1>
+                <p class="text-center w-[85%] font-semibold text-gray-600">Rinterio transforms spaces with a perfect blend of timeless elegance and modern functionality. Our designs are tailored to reflect your unique style, creating interiors that are both beautiful and highly livable.</p>
                 <div class="flex justify-center items-center flex-col">
                     <button class=" flex items-center gap-2 bg-btn-bg rounded-[30px] px-20 lg:px-5 py-3 border-1 border-green-500 my-8">
                         <div>
@@ -118,8 +118,7 @@
                 <div class="lg:w-[50%] text-center lg:text-left">
                     <button class="px-3 py-2  rounded-[30px] bg-white font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> About Us</button>
                     <h1 class="font-extrabold text-black leading-tight text-4xl">We design thoughtful, liveable spaces</h1>
-                    <p class="text-sm md:text-xl lg:text-sm text-gray-600 font-semibold leading-relaxed my-5">The barn house captivates with its blend of rustic charm and 
-                        modern sophistication, featuring weathered wood, sleek metal accents.
+                    <p class="text-sm md:text-xl lg:text-sm text-gray-600 font-semibold leading-relaxed my-5">Rinterio designs elegant, personalized interiors that blend timeless aesthetics with modern functionality, reflecting your unique style.
                     </p>
                    <div class="md:flex md:items-center md:gap-2 md:justify-center lg:inline">
                     <div class="flex items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg mb-8 md:mb-0 lg:mb-8 relative">
@@ -128,7 +127,7 @@
                         </div>
                         <div class="text-left">
                             <h2 class="font-bold text-xl pb-3">Commercial</h2>
-                            <p class="text-sm font-semibold text-gray-600">The barn house captivates with its  blend  of rustic charm and modern.       
+                            <p class="text-sm font-semibold text-gray-600">Rinterio designs sophisticated, functional commercial spaces enhancing brand identity.       
                             </p>
                         </div>
                     </div>
@@ -138,7 +137,7 @@
                         </div>
                         <div class="text-left">
                             <h2 class="font-bold text-xl pb-3">Residential</h2>
-                            <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.
+                            <p class="text-sm font-semibold text-gray-600">Rinterio designs stylish, comfortable homes reflecting your unique personal style.
                             </p>
                         </div>
                     </div>
@@ -174,29 +173,29 @@
         <section class="py-20 w-[90%] mx-auto lg:w-[50%] flex justify-center items-center flex-col">
             <button class="px-3 py-2  rounded-[30px] bg-white font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> How we works</button>
             <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Works Process</h1>
-            <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+            <p class="text-center text-gray-600 font-semibold text-sm">Rinterio’s process combines creativity and collaboration, from initial consultation to final design, ensuring each project reflects your vision and needs.</p>
         </section>
         
         <section class="w-[90%] mx-auto lg:w-[80%] grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 pb-20">
             <div class="bg-card1-bg p-6 rounded-lg">
                 <img src="./assets/concept.png" alt="">
                 <h2 class="font-extrabold text-xl py-2">Concept</h2>
-                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-sm font-semibold text-gray-600">Rinterio turns your vision into captivating, functional design concepts.</p>
             </div>
             <div class="bg-card2-bg p-6 rounded-lg">
                 <img src="./assets/flow-chart.png" alt="">
                 <h2 class="font-extrabold text-xl py-2">Design Process</h2>
-                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-sm font-semibold text-gray-600">Rinterio’s process transforms your vision into beautifully functional, tailored spaces.</p>
             </div>
             <div class="bg-card3-bg p-6 rounded-lg">
                 <img src="./assets/vision.png" alt="">
                 <h2 class="font-extrabold text-xl py-2">Supervision</h2>
-                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-sm font-semibold text-gray-600">Rinterio ensures seamless execution with meticulous supervision of every project.</p>
             </div>
             <div class="bg-card4-bg p-6 rounded-lg">
                 <img src="./assets/budget-planning.png" alt="">
                 <h2 class="font-extrabold text-xl py-2">Budget Planning</h2>
-                <p class="text-sm font-semibold text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-sm font-semibold text-gray-600">Rinterio manages budget planning to maximize value without compromising quality.</p>
             </div>
         </section>
         </section>
@@ -205,14 +204,14 @@
                 <section class="pb-10 w-[100%] mx-auto lg:w-[60%] flex justify-center items-center flex-col pt-28 ">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Explore Our Latest Works</button>
                     <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Latest Portfolio</h1>
-                    <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+                    <p class="text-center text-gray-600 font-semibold text-sm">Discover our latest portfolio showcasing a range of recent projects, highlighting innovative design, meticulous attention to detail, and exceptional craftsmanship.</p>
                 </section>
                 <section class="grid grid-cols-1 md:grid-cols-6 lg:grid-cols-12 gap-4">
                     <div class="col-span-8 md:col-span-6 lg:col-span-8 flex flex-col md:flex-row items-center p-3 gap-4 border border-gray-300 rounded-xl">
                         <img class="w-full" src="./assets/img1.png" alt="">
                         <div>
                             <h1 class="font-bold text-2xl pb-4">Commercial</h1>
-                            <p class="text-sm font-semibold text-gray-600 pb-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <p class="text-sm font-semibold text-gray-600 pb-6">Rinterio designs functional, sophisticated commercial spaces that elevate your brand and enhance workplace efficiency.</p>
                             <button class="flex items-center gap-3">
                                 <h1 class="font-bold text-lg">View Details</h1>
                                 <div>
@@ -233,7 +232,7 @@
                         <img class="w-full md:w-[50%] lg:w-full" src="./assets/img4.png" alt="">
                         <div>
                         <h1 class="font-bold text-xl pb-5">Commercial</h1>
-                        <p class="text-sm font-semibold text-gray-600 pb-3">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <p class="text-sm font-semibold text-gray-600 pb-3">Rinterio creates functional, stylish commercial spaces that boost your brand. </p>
                         <button class="flex items-center gap-3">
                             <h1 class="font-bold text-lg">View Details</h1>
                             <div>
@@ -256,7 +255,7 @@
             <section class="pt-20 mb-10 w-[90%] mx-auto lg:w-[60%] flex justify-center items-center flex-col">
                 <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Rinterio News</button>
                 <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4 tracking-tighter text-center">Read Our Articles and News</h1>
-                <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+                <p class="text-center text-gray-600 font-semibold text-sm">Explore our news and articles to stay informed about the latest design trends, company updates, and project highlights. Discover insights into our creative process and how we’re shaping the industry.</p>
             </section>
         
         <section class="w-[90%] mx-auto lg:w-[80%] grid grid-cols-1 lg:grid-cols-3 gap-5 pb-24">
@@ -335,7 +334,7 @@
                 <section class="pt-24 pb-10 w-[90%] mx-auto lg:w-[60%] flex justify-center items-center flex-col">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Let's Connect</button>
                     <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4 tracking-tighter text-center"> Let’s Discuss Next Project</h1>
-                    <p class="text-center text-gray-600 font-semibold text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum, molestiae sit nemo in deleniti quibusdam excepturi autem possimus nobis?</p>
+                    <p class="text-center text-gray-600 font-semibold text-sm">Ready to bring your vision to life? Let’s discuss your next project and explore how Rinterio can transform your ideas into stunning, functional spaces tailored to your needs and aspirations.</p>
                 </section>
                 <section class="w-[90%] mx-auto lg:w-[70%] pb-20 grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="col-span-2 md:col-span-1 bg-white py-4 pl-4 rounded-3xl outline-0">
@@ -371,7 +370,7 @@
                     <h1 class="text-white font-bold text-3xl">Rinterio</h1>
                 </button>
             </div>
-            <p class="text-center w-[90%] mx-auto lg:w-[80%] text-gray-500 font-semibold text-sm py-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-center w-[90%] mx-auto lg:w-[80%] text-gray-500 font-semibold text-sm py-5">Rinterio specializes in creating unique, functional interiors. Connect with us to transform your space with design solutions tailored to your needs.</p>
             <div class="text-white font-light flex flex-col md:flex-row gap-5 md:gap-0 justify-between items-center py-4">
                 <p>Home</p>
                 <p>Services</p>
