add why choose us container

--- a/index.html
+++ b/index.html
@@ -170,7 +170,69 @@
                 <p class="text-gray-600 font-semibold">Staff Members</p>
             </div>
         </section>
-        <section class="py-20 w-[90%] mx-auto lg:w-[50%] flex justify-center items-center flex-col">
+        <section class="w-[90%] mx-auto lg:w-[80%] mt-28 mb-20">
+            <div>
+                <h1 class="text-center font-extrabold text-3xl lg:text-5xl text-black pb-5">Why Choose Us</h1>
+                <p class="text-center font-semibold text-gray-600 text-sm lg:w-[70%] lg:mx-auto">Choose Rinterio for our commitment to excellence, personalized approach, and proven track record. We deliver tailored design solutions that blend creativity and functionality, ensuring your space reflects your unique vision.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 my-10">
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img src="./assets/plan.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">Interior Expertise</h1>
+                        <p class="text-sm font-semibold text-gray-600">Rinterio brings years of interior design expertise, creating spaces that seamlessly blend style, functionality, and your unique vision.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img src="./assets/trophy.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">Award Winning</h1>
+                        <p class="text-sm font-semibold text-gray-600">Rinterio is an award-winning firm recognized for excellence in design, delivering innovative and inspiring interiors that stand out.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img  src="./assets/chat.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">Free Consultation</h1>
+                        <p class="text-sm font-semibold text-gray-600">Start your design journey with a free consultation from Rinterio. Let's explore how we can transform your space together.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img  src="./assets/wallet.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">Reasonable Price</h1>
+                        <p class="text-sm font-semibold text-gray-600">Rinterio offers exceptional design solutions at reasonable prices, ensuring high-quality results that fit your budget without compromising on style or functionality.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img  src="./assets/recycle.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">Guaranteed Works</h1>
+                        <p class="text-sm font-semibold text-gray-600">Rinterio guarantees high-quality results with every project, ensuring your vision is realized and satisfaction is achieved through meticulous craftsmanship.</p>
+                    </div>
+                </div>
+                <div class="flex items-start gap-5 bg-white p-5 rounded-xl">
+                    <div class="w-[60%] md:w-[35%] lg:w-[25%]">
+                        <img  src="./assets/support.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-xl pb-2">24 / 7 Support</h1>
+                        <p class="text-sm font-semibold text-gray-600">Rinterio provides 24/7 support to ensure your project runs smoothly, addressing any concerns and offering assistance whenever you need it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-10 w-[90%] mx-auto lg:w-[50%] flex justify-center items-center flex-col">
             <button class="px-3 py-2  rounded-[30px] bg-white font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> How we works</button>
             <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4">Our Works Process</h1>
             <p class="text-center text-gray-600 font-semibold text-sm">Rinterio’s process combines creativity and collaboration, from initial consultation to final design, ensuring each project reflects your vision and needs.</p>
