--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <h1 class="font-extrabold lg:leading-tight text-3xl lg:text-5xl text-center my-8">Creating elegant, personalized interiors that reflect your unique style.</h1>
                 <p class="text-center w-[85%] font-semibold text-gray-600">Rinterio transforms spaces with a perfect blend of timeless elegance and modern functionality. Our designs are tailored to reflect your unique style, creating interiors that are both beautiful and highly livable.</p>
                 <div class="flex justify-center items-center flex-col">
-                    <button class=" flex items-center gap-2 bg-btn-bg rounded-[30px] px-20 lg:px-5 py-3 border-1 border-green-500 my-8">
+                    <button class=" flex items-center gap-2 bg-btn-bg rounded-[30px] px-20 lg:px-5 py-3 border border-green-500 my-8">
                         <div>
                            <h1 class="font-bold text-lg text-black"> View Details</h1>
                         </div>
@@ -121,7 +121,7 @@
                     <p class="text-sm md:text-xl lg:text-sm text-gray-600 font-semibold leading-relaxed my-5">Rinterio designs elegant, personalized interiors that blend timeless aesthetics with modern functionality, reflecting your unique style.
                     </p>
                    <div class="md:flex md:items-center md:gap-2 md:justify-center lg:inline">
-                    <div class="flex items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg mb-8 md:mb-0 lg:mb-8 relative">
+                    <div class="flex items-start lg:items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg mb-8 md:mb-0 lg:mb-8 relative">
                         <div>
                             <img src="./assets/commercial.png" alt="">
                         </div>
@@ -131,13 +131,13 @@
                             </p>
                         </div>
                     </div>
-                    <div class="flex items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg">
+                    <div class="flex items-start lg:items-center gap-5 lg:w-[90%] bg-white p-6 rounded-lg">
                         <div>
                             <img src="./assets/residential.png" alt="">
                         </div>
                         <div class="text-left">
                             <h2 class="font-bold text-xl pb-3">Residential</h2>
-                            <p class="text-sm font-semibold text-gray-600">Rinterio designs stylish, comfortable homes reflecting your unique personal style.
+                            <p class="text-sm font-semibold text-gray-600">Rinterio designs stylish, comfortable homes reflecting your unique personal.
                             </p>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
             </div>
         </section>
         </section>
-        <section class="bg-white pb-20">
+        <section class="bg-gray-200 lg:bg-white pb-20">
             <div class="w-[90%] mx-auto lg:w-[80%]">
                 <section class="pb-10 w-[100%] mx-auto lg:w-[60%] flex justify-center items-center flex-col pt-28 ">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Explore Our Latest Works</button>
