--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
         .manrope{
             font-family: "Manrope", sans-serif;
         }
-        .discuss-container{
-            background-image: url('./assets/bg.jpg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-        }
+        
     </style>
     <script>
         tailwind.config = {
@@ -392,7 +387,7 @@
             </div>
         </section>
         </section>
-        <section class="discuss-container m-2">
+        <section class="bg-[url('./assets/bg.jpg')] bg-center bg-no-repeat bg-cover m-2">
                 <section class="pt-24 pb-10 w-[90%] mx-auto lg:w-[60%] flex justify-center items-center flex-col">
                     <button class="px-3 py-2  rounded-[30px] bg-lime-100 font-semibold mb-6"><i class="fa-solid fa-arrow-right"></i> Let's Connect</button>
                     <h1 class="font-extrabold text-3xl lg:text-5xl text-black pb-4 tracking-tighter text-center"> Let’s Discuss Next Project</h1>
